[package]
name = "rufi_core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "The core module of RuFi library"
homepage = "https://rustfields.github.io/"
documentation = "https://rustfields.github.io/"
repository = "https://github.com/RustFields/RuFi-core"
readme = "README.md"

[dependencies]
