[package]
name = "rufi_core"
version = "6.0.0"
edition = "2021"
license = "Apache-2.0"
description = "The core module of RuFi library"
homepage = "https://rustfields.github.io/"
documentation = "https://rustfields.github.io/"
repository = "https://github.com/RustFields/RuFi-core"
readme = "README.md"
authors = ["Filippo Vissani <filippo.vissani@studio.unibo.it>", "Leonardo Micelli <leonardo.micelli@studio.unibo.it>", "Paolo Penazzi <paolo.penazzi@studio.unibo.it>", "Angela Cortecchia <angela.cortecchia@studio.unibo.it>"]

[dependencies]
