[package]
name = "rufi_core"
version = "15.1.1"
edition = "2021"
license = "Apache-2.0"
description = "The core module of RuFi library"
homepage = "https://rustfields.github.io/"
documentation = "https://rustfields.github.io/"
repository = "https://github.com/RustFields/RuFi-core"
readme = "README.md"
authors = ["Filippo Vissani <filippo.vissani@studio.unibo.it>", "Leonardo Micelli <leonardo.micelli@studio.unibo.it>", "Paolo Penazzi <paolo.penazzi@studio.unibo.it>", "Angela Cortecchia <angela.cortecchia@studio.unibo.it>"]

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.107"